src/global-styles/components/_list_box.scss
/* ... */
.akam-list-box .fixed-table-container-inner {
  // Addresses an issue in firefox trying to calculate the correct height
  @include for("Firefox") {
    max-height: calc(#{$list-box-body-height - $list-box-row-count}); 
    min-height: calc(#{$list-box-body-height - $list-box-row-count}); 
  }
}

.akam-data-table {

  .data {
    position: relative;
    min-height: $data-table-body-height + $list-box-header-height + ($list-box-border-width * 2);
  }

  .akam-pagination {
    border: 0 none;
  }

  th {
    text-align: left;
    border-bottom: $list-box-border;
    @include ellipsis();
    white-space: nowrap;
    padding: 0;
    padding-left: 10px;
    padding-right: 10px;
    height: $list-box-header-height;
    line-height: $list-box-cell-height;

    @include background-image(linear-gradient($list-box-header-gradient-top, $list-box-header-gradient-bottom));
    & + th {
      border-left: $list-box-border;
    }
  }

  th.column-sortable {
    @extend .util-clickable;
    padding-right: 20px;
  }

  .column-checkbox {
    width: 30px;
  }

  td {
    padding: 0 10px;
  }
}

.akam-list-box, .akam-data-table {
  border: $list-box-border;
  @include box-shadow(0 2px 2px 1px rgba(0, 0, 0, 0.15));
  font-size: $body-font-size;
  color: $body-font-color;
  background: #fff;

  .filter {
    height: 36px;
    padding: 4px;

    input {
      width: 100%;
      max-width: 298px;
      padding-right: $list-box-filter-padding-right;
    }

    input + i {
      vertical-align: middle;
      margin-left: $list-box-filter-icon-margin-left;
    }
  }

  .data {
    border-top: $list-box-border;
    border-bottom: $list-box-border;
  }

  table {
    table-layout: fixed;
    background-color: white;
    width: 100%;
    overflow-x: hidden;
    overflow-y: auto;
  }

  tbody {
    tr:nth-child(even) {
      background-color: $list-box-data-row-even-background;
    }
    tr:nth-child(odd) {
      background-color: $list-box-data-row-odd-background;
    }
    tr:hover {
      background-color: $list-box-data-row-hover-background;
    }
    tr.row-selected {
      background-color: $list-box-data-row-selected-background;
    }
  }

  th.column-sortable:hover, th.column-sorted {
    i {
      @extend .luna-arrow-up;
    }

    &.desc i {
      @extend .luna-arrow-down;
    }
  }

  td {
    @include ellipsis();
    white-space: nowrap;
    height: $list-box-cell-height;
    line-height: $list-box-cell-height;
  }

  tbody tr td {
    border: 0 solid $list-box-cell-border-color;
    border-bottom: $list-box-cell-border;

    &:first-child {
      padding-left: 10px;
    }

    padding-right: 10px;
  }

  tbody tr:last-child td {
    border-bottom: none;
  }

  .column-action {
    width: 80px;
    text-align: center;
  }

  td.column-action {
    overflow: visible;
  }

  tr td.column-action > * {
    visibility: hidden;
  }

  tr:hover td.column-action > * {
    visibility: visible;
  }

  td span.highlighted {
    color: #0099cc;
  }

  .dropdown {

    i + .dropdown-menu {
      margin-top: 3px;
    }
  }

  .empty-table-message {
    position: absolute;
    padding: 10px 10px 10px 36px;
    top: $list-box-header-height;
    left: 0;
    right: 0;

    i {
      position: absolute;
      left: 10px;
      top: 50%;
      margin-top: -8px;
    }
  }
}
/* ... */

